--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,6 @@ video {
 .navbar .logo {
     font-size: 24px;
     font-weight: bold;
-    color: #000;
 }
 
 .navbar .menu a {
@@ -288,6 +287,7 @@ video {
     padding: 50px 20px;
     text-align: center;
     display: grid;
+
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     width: 694px;
@@ -376,12 +376,13 @@ video {
 
 .about {
     display: flex;
-     gap: 450px;
+    flex-direction: column;
 }
 
 .address {
     display: flex;
     gap: 30px;
+    align-items: center;
 }
 .Company {
     margin-bottom: 60px;
@@ -433,12 +434,183 @@ b
 
 .left-set2 {
     display: flex;
-    flex-direction: column;
-    gap: 30px;
+    justify-content: space-between ;
+    align-items: center;
+   
 }
 .right-set2 {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+    
+   
+    
+}
+.line-4 p {
+    width: 400px;
+}
+
+.dit {
+    display: flex;
     flex-direction: column;
-    margin-top: 130px;
-    gap: 20px;
+    gap: 15px;
+}
+@media only screen and (max-width: 480px) {
+    .main-container {
+        background-image:  repeating-linear-gradient(190deg,#ffe100,#dfdda1);
+        background-repeat: no-repeat;
+        width: auto;
+    }
+    
+    .main-section4 {
+         padding:30px;
+    }
+
+    .logo {
+        font-size: 13px;
+        font-weight: bold;
+    }
+
+    
+
+    .bg2 {
+        padding: 65px;
+        background-color: black;
+        color: white;
+        position: relative;
+        background-size: cover;
+    }
+
+    .gallery {
+        width: 100%;
+    }
+
+    .test {
+        display: flex;
+        justify-content: center;
+    }
+
+    .menu-items {
+        display: flex;
+        padding: 30px;
+        flex-direction: column;
+        justify-items: center;
+    }
+
+    .main-section5 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .popular-dishes {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .left-set img {
+        width:100%;
+    }
+
+    .left-content h1 {
+        font-size: 60px;
+        margin: 10px 0;
+    }
+
+    .main-section {
+        width: 100%;
+    }
+
+    .navbar .contact p {
+        font-weight: bold;
+        color: #000;
+        margin-right: 30px;
+        font-size: 12px;
+    }
+
+    .navbar .contact span {
+        display: flex;
+        color: #000000;
+        justify-content: end;
+        margin-right: 45px;
+        font-size: 17px;
+    }
+
+    .menu {
+        position: absolute;
+        right: 30px;
+        top: 96px;
+        font-size: 49px;
+        font-weight: bold;
+    }
+ 
+    .main-section3 h2 {
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .main-section3 {
+        margin-top: 40px;
+    }
+
+    .main-section5 h2 {
+        font-size: 35px;
+    }
+
+    .sing-up {
+        text-align: center;
+        align-items: center;
+        width: 290px;
+        grid-template-columns: auto;
+    }
+
+    /* .about {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+    } */
+
+    .social-media {
+        margin-bottom: 0px;
+        margin-top: 40px;
+        margin-left: 8px;
+    }
+
+    .left-set2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+       
+    }
+    .right-set2 {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;  
+    }
+
+    .Company {
+        margin-bottom: 0px;
+        margin-top: 20px;
+    }
+    .line-4 p {
+        width: auto;
+    }
+    .pizza {
+        width: 100%;
+        height: 250px;
+    }
+
+    .nuddle-plate-2 {
+        height: 250px;
+        margin-top: 30px;
+        width: 100%;
+    }
+    .spaghetti-2 {
+        height: 250px;
+        margin-top: 30px;
+        width: 100%;
+    }
 }
