--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,7 @@ b
         margin-top: 20px;
         line-height: 30px;
         font-size: 20px;
+        padding: 20px;
     }
 
     .main-section3 {
@@ -609,6 +610,7 @@ b
     .Company {
         margin-bottom: 0px;
         margin-top: 20px;
+        width: 293px;
     }
     .line-4 p {
         width: 100%;
@@ -654,9 +656,13 @@ b
     .main-section3 p {
         text-align: center;
         margin-bottom: 30px;
-        margin-top: 30px;
-        font-size: 25px;
+        margin-top: 0px;
+        font-size: 20px;
         color: #2a2a2a;
-        width: 300px;
+        padding: 20px;
+    }
+    .left-content h2 {
+        font-size: 38px;
+        text-align: center;
     }
 }
