--- a/css/style.css
+++ b/css/style.css
@@ -606,6 +606,13 @@ b
         justify-content: center;
         align-items: center;  
     }
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px;
+        position: relative;
+    }
 
     .Company {
         margin-bottom: 0px;
@@ -670,6 +677,16 @@ b
         font-size: 25px;
         text-align: center;
         font-weight: bold;
+    }
+
+    .order-btn {
+        padding: 15px 60px;
+        background-color: #fcde00;
+        color: #000000;
+        cursor: pointer;
+        font-size: 23px;
+        font-weight: 600;
+        margin-top: 30px;
     }
     
 }
